templates/vpc.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: >-
  Antonette Caldwell / Udacity Cloud DevOps Nanodegree Program @2020
  This template deploys the infrastructure for a highly available
  web application.
Parameters:
  EnvironmentName:
    Description: Name of the environment
    Type: String
  VPCCidrBlock:
    Description: CIDR notation for VPC
    Type: String
  PublicSubnetCIDR:
    Description: CIDR Notation for the Public Subnet in the first Availability Zone
    Type: String
  PrivateSubnetCIDR:
    Description: CIDR Notation for the Private Subnet in the first Availabiltiy Zone
    Type: String
  PublicSubnet2CIDR:
    Description: CIDR Notation for the Public Subnet in the first Availability Zone
    Type: String
  PrivateSubnet2CIDR:
    Description: CIDR Notation for the Private Subnet in the first Availabiltiy Zone
    Type: String

# Resources
Resources:
  UdacityVPC:
    Type: "AWS::EC2::VPC"
    Properties:
      CidrBlock: !Ref VPCCidrBlock
      EnableDnsHostnames: True
# Setting up Public and Private Submets and attach to Udacity VPC
  # First Public and Private Subnet
  PublicSubnet:
    Type: "AWS::EC2::Subnet"
    Properties:
      CidrBlock: !Ref PublicSubnetCIDR
      AvailabilityZone: !Select [ 0, !GetAZs "" ]
      MapPublicIpOnLaunch: True
      VpcId: !Ref UdacityVPC
  PrivateSubnet:
    Type: "AWS::EC2::Subnet"
    Properties:
      CidrBlock: !Ref PrivateSubnetCIDR
      AvailabilityZone: !Select [ 0, !GetAZs ""]
      MapPublicIpOnLaunch: False
      VpcId: !Ref UdacityVPC
  # Second Public and Private Subnet
  PublicSubnet2:
    Type: "AWS::EC2::Subnet"
    Properties:
      CidrBlock: !Ref PublicSubnet2CIDR
      AvailabilityZone: !Select [ 1, !GetAZs "" ]
      MapPublicIpOnLaunch: True
      VpcId: !Ref UdacityVPC
  PrivateSubnet2:
    Type: "AWS::EC2::Subnet"
    Properties:
      CidrBlock: !Ref PrivateSubnet2CIDR
      AvailabilityZone: !Select [ 1, !GetAZs ""]
      MapPublicIpOnLaunch: False
      VpcId: !Ref UdacityVPC
# Internet Gateway and Nat Gateway
  UdacityInternetGateway:
    Type: "AWS::EC2::InternetGateway"
  InternetGatewayAttachment:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      InternetGatewayId: !Ref UdacityInternetGateway
      VpcId: !Ref UdacityVPC
  NatGatewayEIP:
    Type: "AWS::EC2::EIP"
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc
  NatGateway:
    Type: "AWS::EC2::NatGateway"
    Properties:
      AllocationId: !GetAtt NatGatewayEIP.AllocationId
      SubnetId: !Ref PublicSubnet
  NatGateway2EIP:
    Type: "AWS::EC2::EIP"
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc
  NatGateway2:
    Type: "AWS::EC2::NatGateway"
    Properties:
      AllocationId: !GetAtt NatGateway2EIP.AllocationId
      SubnetId: !Ref PublicSubnet2

  # Routing Tables
  # Public and Private in first public and private subnets
  PublicRouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref UdacityVPC
  DefaultPublicRoute:
    Type: "AWS::EC2::Route"
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref UdacityInternetGateway
  PublicSubnetRouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet
  PrivateRouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref UdacityVPC
  DefaultPrivateRoute:
    Type: "AWS::EC2::Route"
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway
  PrivateSubnetRouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet

  # Public and Private in second public and private subnets
  PublicRouteTable2:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref UdacityVPC
  DefaultPublicRoute2:
    Type: "AWS::EC2::Route"
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref UdacityInternetGateway
  PublicSubnet2RouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref PublicRouteTable2
      SubnetId: !Ref PublicSubnet2
  PrivateRouteTable2:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref UdacityVPC
  DefaultPrivateRoute2:
    Type: "AWS::EC2::Route"
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway2
  PrivateSubnet2RouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      SubnetId: !Ref PrivateSubnet2
# Outputs
Outputs:
  VPCId:
    Description: A reference to the created VPC
    Value: !Ref UdacityVPC
    Export:
      Name: !Sub "${EnvironmentName}-VPCID"
  PublicSubnets:
    Description: A lit of the Public Subnets
    Value: !Join [",", [ !Ref PublicSubnet, !Ref PublicSubnet2 ]]
    Export:
      Name: !Sub "${EnvironmentName}-PUB-NETS"
  PublicSubnet1:
    Description: A reference to the public subnet in the 1st Availability Zone
    Value: !Ref PublicSubnet
    Export:
      Name: !Sub "${EnvironmentName}-PUB1-SN"
  PublicSubnet2:
    Description: A reference to the public subnet in the 2nd Availability Zone
    Value: !Ref PublicSubnet2
    Export:
      Name: !Sub "${EnvironmentName}-PUB2-SN"
  PrivateSubnets:
    Description: A list of private subnets
    Value: !Join [ ",", [ !Ref PrivateSubnet, !Ref PrivateSubnet2 ]]
    Export:
      Name: !Sub "${EnvironmentName}-PRI-NETS"
  PrivateSubnet1:
    Description: A reference to the private subnet in the 1st Availability Zone
    Value: !Ref PrivateSubnet
    Export:
      Name: !Sub "${EnvironmentName}-PRI1-SN"
  PrivateSubnet2:
    Description: A reference to the private subnet in the 2nd Availability Zone
    Value: !Ref PrivateSubnet2
    Export:
      Name: !Sub "${EnvironmentName}-PRI2-SN"
